--- a/.env.example
+++ b/.env.example
@@ -12,8 +12,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=registration
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=AliZibaie
+DB_PASSWORD=Ali1380$50505
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
